--- a/static/poker-planner-ui/package.json
+++ b/static/poker-planner-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jira-issue-panel-custom-ui-static",
+  "name": "poker-planner-ui",
   "version": "0.2.49",
   "private": true,
   "homepage": ".",
