--- a/static/poker-planner-ui/package.json
+++ b/static/poker-planner-ui/package.json
@@ -18,7 +18,13 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
-    "react-scripts": "^5.0.1"
+    "@types/jest": "^30.0.0",
+    "@types/node": "^25.0.10",
+    "@types/react": "^19.2.9",
+    "@types/react-dom": "^19.2.3",
+    "react-scripts": "^5.0.1",
+    "ts-jest": "^29.4.6",
+    "typescript": "^5.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
