fix(build): use legacy-peer-deps in build script to resolve ci conflicts

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "has-ui": true,
   "scripts": {
-    "build": "cd static/poker-planner-ui && npm install && npm run build",
+    "build": "cd static/poker-planner-ui && npm install --legacy-peer-deps && npm run build",
     "lint": "./node_modules/.bin/eslint src/**/* || npm run lint:fix",
     "lint:fix": "./node_modules/.bin/eslint src/**/* --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
