--- a/manifest.yml
+++ b/manifest.yml
@@ -7,7 +7,7 @@ modules:
       viewportSize: medium
       title: Dr. Jira Poker Planner
       description: "Plan your poker sessions with Dr. Jira Poker Planner"
-      icon: https://developer.atlassian.com/platform/forge/images/issue-panel-icon.svg
+      icon: https://raw.githubusercontent.com/jabrealmoe/DrJiraPokerPlanner/main/assets/drjira.svg
   jira:adminPage:
     - key: poker-app-admin-page
       resource: main
